package blackhole;

option java_package = "com.dp.blackhole.common.gen";
option java_outer_classname = "ReadyCollectorPB";

message ReadyCollector {
    required string app_name = 1;
    required string app_server = 2;
    required string collector_server = 3;
    required int64 connectedTs = 4;
}